Text-align fix on large screens

--- a/uwikicms/php/_uwikicms/template/css/adele/layout.css
+++ b/uwikicms/php/_uwikicms/template/css/adele/layout.css
@@ -96,6 +96,7 @@
 
 #main {
     max-width: 1500px;    
+    text-align: center;
 }
 
 #block1 {
