--- a/uwikicms/php/_uwikicms/template/css/garance/layout.css
+++ b/uwikicms/php/_uwikicms/template/css/garance/layout.css
@@ -95,6 +95,7 @@
 
 #main {
     max-width: 1500px;    
+    text-align: center;
 }
 
 #block1 {
