--- a/uwikicms/php/_uwikicms/template/css/ufo/layout.css
+++ b/uwikicms/php/_uwikicms/template/css/ufo/layout.css
@@ -105,6 +105,7 @@
 
 #main {
     max-width: 1500px;    
+    text-align: center;
 }
 
 #block1 {
