--- a/uwikicms/php/_uwikicms/template/css/ufoot/layout.css
+++ b/uwikicms/php/_uwikicms/template/css/ufoot/layout.css
@@ -111,6 +111,7 @@
 
 #main {
     max-width: 1500px;    
+    text-align: center;
 }
 
 #block1 {
